--- a/glossary.html
+++ b/glossary.html
@@ -1,10 +1,7 @@
-<div id="breadcrumbs"><a href="home.html">Home</a> &rarr;
-<a href="glossary.html"><b>Glossary</b></a></div>
-
-<link rel="stylesheet" type="text/css" href="TBLbreadcrumbs.css"/>
-
-<div id="main-content">
-
+---
+layout: default
+title: Glossary
+---
 <h4>Glossary</h4>
 
 <p><b><a name="link1">Communicative Competence</a></b> - The user&#39;s ability to understand and engage in a language by learning grammatical patterns and actively practicing.</p>
