--- a/workscited.html
+++ b/workscited.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Glossary
+---
 <div id="breadcrumbs"><a href="home.html">Home</a> &rarr;
 <a href="workscited.html"><b>Works Cited</b></a></div>
 
