--- a/home.html
+++ b/home.html
@@ -64,5 +64,10 @@ title: Glossary
 
 </div>
  </body>
+
+<link rel="stylesheet" href="assets/css/style.css">
+<script src="assets/js/script.js"></script>
+
  </html>
+
 
