--- a/home.html
+++ b/home.html
@@ -1,73 +1,56 @@
 ---
 layout: default
-title: Glossary
+title: Home
 ---
-<head>
 
-<title>Intercultural Communication and Hypertext</title>
+<!-- Page-specific metadata -->
+<meta name="description" content="Explore how digital literacy, rhetoric, and language learning affect intercultural and international technical communication.">
+<meta name="keywords" content="international technical communication, intercultural communication, digital literacy, transcultural digital literacy, teaching languages, multicultural education, rhetoric, culture, translation, hypertext, technical communication">
+<meta name="author" content="Marisa Varela">
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-
-<!--The image of HTML code is being used with permission by the Markus Spiske. All other information is copyrighted by the author. Both the HTML/CSS coding and the writing and research were done by the author.-->
-
-<meta name=”description” content=”Explore the ways digital literacy, rhetoric, and learning languages affects intercultural communication and international technical communication.“>
-
-<meta name=”keywords” content=”international technical communication, intercultural communication, digital literacy, transcultural digital literacy, teaching languages, multicultural education, rhetoric, culture, translation, hypertext, technical communication”>
-
-<meta name=”author” content=”Marisa Varela”>
-
-
-<link rel="stylesheet" type="text/css" href="TBLbreadcrumbs.css"/>
-
-</head>
-
-<body>
-
-
-
-
-
-<div id="container">
-<div id="header"><img src="homepage.jpg" height="220" width="330" align="left" alt="HTML Code"/><h1 style="position:relative; top:60px">Intercultural Communication and Hypertext</h1></div>
- <div id="menu">
- <ul>
- <li><a href="home.html">Home</a></li>
- <li><a href="cultureandtranslation.html">Learning About Cultures and Translation</a></li>
- <li><a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a></li>
-<li><a href="glossary.html">Glossary</a></li>
-<li><a href="workscited.html">Works Cited</a></li>
-
-</ul>
-</div>
-
-
-<div id="main-content">
-
-
-<h4>Introduction to Intercultural Communication and Hypertext</h4>
-<p>As we continue to globalize the field of technical communication, we must also continue to study the way we learn about these new cultures and languages that we come across through our audiences, and how digital literacy and rhetoric play a role in the way we communicate across hypertext. Rhetoric and digital literacy vary across borders, and it is important to understand how intercultural communication works before working in international technical communication.</p>
-<p class="rightpquote">Understanding and appreciating other cultures is just one step necessary for succeeding in effective international or intercultural communication.</p>
-<p>This site will also discuss the role of hypertext in teaching and learning about new languages and cultures, as learning about a people and their language is often one of many steps necessary for international communication. If the goal of technical communication is to communicate accurately and effectively, then, today especially, the goal should also be to understand how to communicate with those of other cultural beliefs and languages.</p>
-
-
-<p class="block" style="position:relative; top:20px;"><a href="cultureandtranslation.html">Learning About Cultures, Translation, and Teaching a New Language</a>&nbsp;&nbsp;&nbsp;&nbsp; Teaching students about other languages and cultures, as well as how to write for translation are all important factors for international technical communication.</p>
-
-<p class="block" style="position:relative; top:20px;"><a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a>&nbsp;&nbsp;&nbsp;&nbsp; Digital literacy and rhetoric vary between borders and languages. It is important to understand how to navigate these differences when communicating interculturally.</p>
-
-<br>
-
-
-
-
-</div>
-<div id="footer"><p><h6>Copyright&copy;2021 Marisa Varela. All rights reserved.</h6></p></div>
-
-</div>
- </body>
-
+<!-- Custom CSS (optional additional styling) -->
 <link rel="stylesheet" href="assets/css/style.css">
+
+<!-- Page content starts -->
+<div id="container">
+
+  <div id="header">
+    <img src="assets/images/homepage.jpg" height="220" width="330" align="left" alt="HTML Code">
+    <h1 style="position:relative; top:60px;">Intercultural Communication and Hypertext</h1>
+  </div>
+
+  <nav id="menu">
+    <ul>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="cultureandtranslation.html">Learning About Cultures and Translation</a></li>
+      <li><a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a></li>
+      <li><a href="glossary.html">Glossary</a></li>
+      <li><a href="workscited.html">Works Cited</a></li>
+    </ul>
+  </nav>
+
+  <div id="main-content">
+    <h4>Introduction to Intercultural Communication and Hypertext</h4>
+
+    <p>As we continue to globalize the field of technical communication, we must also continue to study the way we learn about these new cultures and languages that we come across through our audiences, and how digital literacy and rhetoric play a role in the way we communicate across hypertext. Rhetoric and digital literacy vary across borders, and it is important to understand how intercultural communication works before working in international technical communication.</p>
+
+    <p class="rightpquote">Understanding and appreciating other cultures is just one step necessary for succeeding in effective international or intercultural communication.</p>
+
+    <p>This site will also discuss the role of hypertext in teaching and learning about new languages and cultures, as learning about a people and their language is often one of many steps necessary for international communication. If the goal of technical communication is to communicate accurately and effectively, then, today especially, the goal should also be to understand how to communicate with those of other cultural beliefs and languages.</p>
+
+    <p class="block" style="position:relative; top:20px;">
+      <a href="cultureandtranslation.html">Learning About Cultures, Translation, and Teaching a New Language</a> — Teaching students about other languages and cultures, as well as how to write for translation are all important factors for international technical communication.
+    </p>
+
+    <p class="block" style="position:relative; top:20px;">
+      <a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a> — Digital literacy and rhetoric vary between borders and languages. It is important to understand how to navigate these differences when communicating interculturally.
+    </p>
+  </div>
+
+  <div id="footer">
+    <h6>Copyright &copy; 2021 Marisa Varela. All rights reserved.</h6>
+  </div>
+
+</div>
+
 <script src="assets/js/script.js"></script>
-
- </html>
-
-
