--- a/home.html
+++ b/home.html
@@ -3,17 +3,7 @@ layout: default
 title: Home
 ---
 
-<!-- Page-specific metadata -->
-<meta name="description" content="Explore how digital literacy, rhetoric, and language learning affect intercultural and international technical communication.">
-<meta name="keywords" content="international technical communication, intercultural communication, digital literacy, transcultural digital literacy, teaching languages, multicultural education, rhetoric, culture, translation, hypertext, technical communication">
-<meta name="author" content="Marisa Varela">
-
-<!-- Custom CSS (optional additional styling) -->
-<link rel="stylesheet" href="assets/css/style.css">
-
-<!-- Page content starts -->
 <div id="container">
-
   <div id="header">
     <img src="assets/images/homepage.jpg" height="220" width="330" align="left" alt="HTML Code">
     <h1 style="position:relative; top:60px;">Intercultural Communication and Hypertext</h1>
@@ -28,6 +18,12 @@ title: Home
       <li><a href="workscited.html">Works Cited</a></li>
     </ul>
   </nav>
+
+  <div id="main-content">
+    <h4>Introduction to Intercultural Communication and Hypertext</h4>
+    <p>...</p>
+  </div>
+</div>
 
   <div id="main-content">
     <h4>Introduction to Intercultural Communication and Hypertext</h4>
@@ -54,3 +50,4 @@ title: Home
 </div>
 
 <script src="assets/js/script.js"></script>
+
