--- a/home.html
+++ b/home.html
@@ -1,1 +1,63 @@
+---
+layout: default
+title: Home
+---
+
+<link rel="stylesheet" href="assets/css/style.css">
+
+<div id="container">
+
+  <div id="header">
+    <img src="assets/images/homepage.jpg" height="220" width="330" align="left" alt="HTML Code">
+    <h1 style="position:relative; top:60px;">Intercultural Communication and Hypertext</h1>
+  </div>
+
+  <nav style="text-align:center; margin: 1em 0;">
+    <a href="home.html">Home</a> |
+    <a href="glossary.html">Glossary</a> |
+    <a href="workscited.html">Works Cited</a> |
+    <a href="rhetoric.html">Rhetoric</a>
+  </nav>
+
+  <div id="main-content">
+    <h4>Introduction to Intercultural Communication and Hypertext</h4>
+
+    <p>
+      As we continue to globalize the field of technical communication, we must also continue
+      to study the way we learn about these new cultures and languages that we come across through
+      our audiences, and how digital literacy and rhetoric play a role in the way we communicate
+      across hypertext.
+    </p>
+
+    <p class="rightpquote">
+      Understanding and appreciating other cultures is just one step necessary for succeeding in
+      effective international or intercultural communication.
+    </p>
+
+    <p>
+      This site will also discuss the role of hypertext in teaching and learning about new languages
+      and cultures, as learning about a people and their language is often one of many steps necessary
+      for international communication.
+    </p>
+
+    <p class="block" style="margin-top:20px;">
+      <a href="cultureandtranslation.html">Learning About Cultures, Translation, and Teaching a New Language</a> —
+      Teaching students about other languages and cultures, as well as how to write for translation,
+      are all important factors for international technical communication.
+    </p>
+
+    <p class="block" style="margin-top:20px;">
+      <a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a> —
+      Digital literacy and rhetoric vary between borders and languages. It is important to
+      understand how to navigate these differences when communicating interculturally.
+    </p>
+  </div>
+
+  <footer style="margin-top:2em; text-align:center; font-size:0.8em;">
+    <p>Copyright &copy; 2021 Marisa Varela. All rights reserved.</p>
+  </footer>
+
+</div>
+
+<script src="assets/js/script.js"></script>
 
