--- a/home.html
+++ b/home.html
@@ -3,22 +3,24 @@ layout: default
 title: Home
 ---
 
-<link rel="stylesheet" href="assets/css/style.css">
+<section class="page-content" style="max-width: 800px; margin: auto; line-height: 1.6;">
+  <h1>Welcome to My Website</h1>
 
-<div id="container">
+  <p>
+    This site explores <strong>intercultural communication</strong> and <em>hypertext theory</em>.
+    Use the navigation bar above or visit the following pages:
+  </p>
 
-  <div id="header">
-    <img src="assets/images/homepage.jpg" height="220" width="330" align="left" alt="HTML Code">
-    <h1 style="position:relative; top:60px;">Intercultural Communication and Hypertext</h1>
-  </div>
+  <ul>
+    <li><a href="glossary.html">Glossary</a></li>
+    <li><a href="rhetoric.html">Rhetoric</a></li>
+    <li><a href="workcited.html">Works Cited</a></li>
+  </ul>
 
-  <nav style="text-align:center; margin: 1em 0;">
-    <a href="home.html">Home</a> |
-    <a href="glossary.html">Glossary</a> |
-    <a href="workscited.html">Works Cited</a> |
-    <a href="rhetoric.html">Rhetoric</a>
-  </nav>
-
+  <p>
+    Thank you for visiting! Feel free to explore more through the links above.
+  </p>
+</section>
   <div id="main-content">
     <h4>Introduction to Intercultural Communication and Hypertext</h4>
 
