--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@ layout: default
 title: Home
 ---
 
-<section class="page-content" style="max-width: 800px; margin: auto; line-height: 1.6;">
+<section class="page-content" style="max-width: 800px; margin: auto; padding: 2rem; line-height: 1.7;">
+
   <h1>Welcome to My Website</h1>
 
   <p>
