--- a/home.html
+++ b/home.html
@@ -3,64 +3,50 @@ layout: default
 title: Home
 ---
 
-<section class="page-content" style="max-width: 800px; margin: auto; padding: 2rem; line-height: 1.7;">
+<main class="page-content" style="max-width: 800px; margin: auto; padding: 2rem; line-height: 1.8; font-size: 1rem;">
 
-  <h1>Welcome to My Website</h1>
+  <header style="text-align: center; margin-bottom: 2rem;">
+    <h1>Intercultural Communication and Hypertext</h1>
+    <p><em>Exploring digital literacy, rhetoric, and language in a globalized world</em></p>
+  </header>
 
-  <p>
-    This site explores <strong>intercultural communication</strong> and <em>hypertext theory</em>.
-    Use the navigation bar above or visit the following pages:
-  </p>
+  <section>
+    <h2>Welcome</h2>
+    <p>
+      This site explores <strong>intercultural communication</strong> and <em>hypertext theory</em>.
+      Use the navigation links below to explore topics related to communication across cultures,
+      digital literacy, and rhetoric.
+    </p>
 
-  <ul>
-    <li><a href="glossary.html">Glossary</a></li>
-    <li><a href="rhetoric.html">Rhetoric</a></li>
-    <li><a href="workcited.html">Works Cited</a></li>
-  </ul>
+    <ul>
+      <li><a href="glossary.html">Glossary</a></li>
+      <li><a href="rhetoric.html">Rhetoric</a></li>
+      <li><a href="workcited.html">Works Cited</a></li>
+    </ul>
+  </section>
 
-  <p>
-    Thank you for visiting! Feel free to explore more through the links above.
-  </p>
-</section>
-  <div id="main-content">
-    <h4>Introduction to Intercultural Communication and Hypertext</h4>
+  <hr style="margin: 2rem 0;">
+
+  <section>
+    <h2>Introduction to Intercultural Communication and Hypertext</h2>
 
     <p>
       As we continue to globalize the field of technical communication, we must also continue
-      to study the way we learn about these new cultures and languages that we come across through
-      our audiences, and how digital literacy and rhetoric play a role in the way we communicate
-      across hypertext.
+      to study the ways we learn about new cultures and languages through our audiences, and how
+      digital literacy and rhetoric play roles in communication across hypertext.
     </p>
 
-    <p class="rightpquote">
-      Understanding and appreciating other cultures is just one step necessary for succeeding in
-      effective international or intercultural communication.
+    <blockquote style="font-style: italic; border-left: 3px solid #ccc; padding-left: 1rem; color: #555;">
+      “Understanding and appreciating other cultures is just one step necessary for succeeding in
+      effective international or intercultural communication.”
+    </blockquote>
+
+    <p>
+      This site also discusses the role of hypertext in teaching and learning about new languages
+      and cultures. Learning about a people and their language is one of many steps necessary
+      for successful international communication.
     </p>
 
     <p>
-      This site will also discuss the role of hypertext in teaching and learning about new languages
-      and cultures, as learning about a people and their language is often one of many steps necessary
-      for international communication.
-    </p>
-
-    <p class="block" style="margin-top:20px;">
-      <a href="cultureandtranslation.html">Learning About Cultures, Translation, and Teaching a New Language</a> —
-      Teaching students about other languages and cultures, as well as how to write for translation,
-      are all important factors for international technical communication.
-    </p>
-
-    <p class="block" style="margin-top:20px;">
-      <a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a> —
-      Digital literacy and rhetoric vary between borders and languages. It is important to
-      understand how to navigate these differences when communicating interculturally.
-    </p>
-  </div>
-
-  <footer style="margin-top:2em; text-align:center; font-size:0.8em;">
-    <p>Copyright &copy; 2021 Marisa Varela. All rights reserved.</p>
-  </footer>
-
-</div>
-
-<script src="assets/js/script.js"></script>
-
+      If the goal of technical communication is to communicate accurately and effectively,
+      then the goal must also be to understand how to communicate across differing cultural beli
