--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<main class="page-content" style="max-width: 800px; margin: auto; padding: 2rem; line-height: 1.8; font-size: 1rem;">
+<main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
 
   <header style="text-align: center; margin-bottom: 2rem;">
     <h1>Intercultural Communication and Hypertext</h1>
@@ -31,22 +31,34 @@ title: Home
     <h2>Introduction to Intercultural Communication and Hypertext</h2>
 
     <p>
-      As we continue to globalize the field of technical communication, we must also continue
-      to study the ways we learn about new cultures and languages through our audiences, and how
-      digital literacy and rhetoric play roles in communication across hypertext.
+      As we continue to globalize the field of technical communication, we must study the ways we learn about new cultures and languages through our audiences, and how digital literacy and rhetoric play roles in communication across hypertext.
     </p>
 
-    <blockquote style="font-style: italic; border-left: 3px solid #ccc; padding-left: 1rem; color: #555;">
-      “Understanding and appreciating other cultures is just one step necessary for succeeding in
-      effective international or intercultural communication.”
+    <blockquote style="font-style: italic; border-left: 3px solid #888; padding-left: 1rem; color: #555;">
+      “Understanding and appreciating other cultures is just one step necessary for succeeding in effective international or intercultural communication.”
     </blockquote>
 
     <p>
-      This site also discusses the role of hypertext in teaching and learning about new languages
-      and cultures. Learning about a people and their language is one of many steps necessary
-      for successful international communication.
+      This site also discusses the role of hypertext in teaching and learning about new languages and cultures. Learning about a people and their language is one of many steps necessary for successful international communication.
     </p>
 
-    <p>
-      If the goal of technical communication is to communicate accurately and effectively,
-      then the goal must also be to understand how to communicate across differing cultural beli
+    <div style="margin-top: 2rem;">
+      <p>
+        <strong><a href="cultureandtranslation.html">Learning About Cultures, Translation, and Teaching a New Language</a>:</strong>
+        Teaching students about other languages and cultures, as well as how to write for translation, are all important factors for international technical communication.
+      </p>
+
+      <p>
+        <strong><a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a>:</strong>
+        Digital literacy and rhetoric vary between borders and languages. It’s important to understand how to navigate these differences when communicating interculturally.
+      </p>
+    </div>
+  </section>
+
+  <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#777;">
+    <p>&copy; 2021 Marisa Varela. All rights reserved.</p>
+  </footer>
+
+</main>
+
+<script src="assets/js/script.js"></script>
