--- a/glossary.html
+++ b/glossary.html
@@ -1,1 +1,35 @@
+---
+layout: default
+title: Glossary
+---
+
+<main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
+
+  <header style="text-align: center; margin-bottom: 2rem;">
+    <h1>Glossary</h1>
+    <p><em>Key terms in intercultural communication and digital literacy</em></p>
+  </header>
+
+  <nav style="margin-bottom: 2rem;">
+    <a href="home.html">Home</a> &rarr;
+    <strong>Glossary</strong>
+  </nav>
+
+  <section>
+    <p><strong id="link1">Communicative Competence</strong> – The user's ability to understand and engage in a language by learning grammatical patterns and actively practicing.</p>
+
+    <p><strong id="link2">Individualism-Collectivism</strong> – The way that individuals and groups relate to and influence each other. Whether a culture values freedom, personal space, individuality, versus the collectivist value of experiencing the world through social and familial groups.</p>
+
+    <p><strong id="link3">Universal-Particular</strong> – Applies to the developed rules and norms of a culture. Universal cultures maintain definitions of <q>good</q> and <q>right</q> upon which society acts. Particular cultures place more emphasis on the context of morality and situational details.</p>
+
+    <p><strong id="link4">High Context-Low Context</strong> – How a culture values communication. High context cultures communicate through language that relies on prior knowledge, while low context communication focuses less on the additional context.</p>
+
+    <p><strong id="link5">Multiliteracy</strong> – Defines the skills needed to navigate hypertext in social, cultural, and methodological aspects.</p>
+  </section>
+
+  <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#777;">
+    <p>&copy; 2021 Marisa Varela. All rights reserved.</p>
+  </footer>
+
+</main>
 
