--- a/glossary.html
+++ b/glossary.html
@@ -3,7 +3,7 @@ layout: default
 title: Glossary
 ---
 
-<main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
+<main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7;">
 
   <header style="text-align: center; margin-bottom: 2rem;">
     <h1>Glossary</h1>
@@ -32,4 +32,3 @@ title: Glossary
   </footer>
 
 </main>
-
