--- a/workcited.html
+++ b/workcited.html
@@ -1,1 +1,57 @@
+---
+layout: default
+title: Works Cited
+---
+
+<main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
+
+  <header style="text-align: center; margin-bottom: 2rem;">
+    <h1>Works Cited</h1>
+    <p><em>Sources referenced for intercultural communication and hypertext research</em></p>
+  </header>
+
+  <nav style="margin-bottom: 2rem;">
+    <a href="home.html">Home</a> &rarr;
+    <strong>Works Cited</strong>
+  </nav>
+
+  <section>
+    <p>Agboka, Godwin Y. <q>Thinking About Social Justice: Interrogating the international in international technical communication discourse.</q> (2013).</p>
+
+    <p>Bourina, Helena V, and Larisa A Dunaeva. <q>Role of Hypertext in Teaching Foreign Languages.</q> <i>E-Learning and Digital Media</i>, vol. 16, no. 2, 2019, pp. 110-121., doi:10.1177/2042753019828358.</p>
+
+    <p>Chong, Felicia. <q>Teaching usability in a technical communication classroom: Developing competencies to user-test and communicate with an international audience.</q> <i>2012 IEEE International Professional Communication Conference</i>. IEEE, 2012.</p>
+
+    <p>Cleary, Yvonne, B. Thatcher, and K. St Amant. <q>An integrated framework for teaching international communication.</q> <i>Teaching intercultural rhetoric and technical communication: Theories, curriculum, pedagogies, and practices</i>. Amityville, New York: Baywood, 2010. 15-29.</p>
+
+    <p>Flammia, Madelyn. <q>Preparing technical communication students to play a role on the translation team.</q> <i>IEEE Transactions on Professional Communication</i> 48.4 (2005): 401-412.</p>
+
+    <p>Hamutoglu, Nazire Burcin, et al. <q>Comparative Cross-Cultural Study in Digital Literacy.</q> <i>Eurasian Journal of Educational Research</i>, vol. 20, no. 88, 2020, pp. 1-28., doi:10.14689/ejer.2020.88.6.</p>
+
+    <p>Irwin, Martha, et al. <q>Enhancing a Multicultural Program Through HyperText Links.</q> <i>Computers in the Schools</i>, vol. 10, no. 3-4, June 1994, pp. 255-280., doi:10.1300/j025v10n03_01.</p>
+
+    <p>Kim, Grace MyHyun. <q>Transcultural Digital Literacies: Cross-Border Connections and Self-Representations in an Online Forum.</q> <i>Reading Research Quarterly</i>, vol. 51, no. 2, 2015, pp. 199-219., doi:10.1002/rrq.131.</p>
+
+    <p>Lauren, Benjamin. <q>Fostering intercultural communication through transactional rhetoric: A problem-based service-learning model for professional and technical communication.</q> <i>2015 IEEE International Professional Communication Conference (IPCC)</i>. IEEE, 2015.</p>
+
+    <p>Matheson, Breeanne, and Emily January Petersen. <q>Broadening the View: Technical Writers and Digital Technologies in India.</q> <i>2019 IEEE International Professional Communication Conference (ProComm)</i>. IEEE, 2019.</p>
+
+    <p>Matveeva, Natalia. <q>Paralogic hermeneutics: An alternative approach to teaching intercultural communication in a technical writing course.</q> <i>IPCC 2005. Proceedings. International Professional Communication Conference, 2005.</i> IEEE, 2005.</p>
+
+    <p>Risku, Hanna. <q>Migrating from translation to technical communication and usability.</q> <i>Benjamin's Translation Library</i> 50 (2004): 181-196.</p>
+
+    <p>Risku, Hanna, and Richard Pircher. <q>Visual aspects of intercultural technical communication: A cognitive scientific and semiotic point of view.</q> <i>Meta: journal des traducteurs/Meta: Translators' Journal</i> 53.1 (2008): 154-166.</p>
+
+    <p>Thatcher, Barry. <q>Rhetorics and Communication Media across Cultures.</q> <i>Journal of English for Academic Purposes</i>, vol. 3, no. 4, 2004, pp. 305-320., doi:10.1016/j.jeap.2004.07.004.</p>
+
+    <p>Thatcher, Barry, Kirk St Amant, and Charles H. Sides. <q>Teaching Intercultural Rhetoric and Technical Communication: Theories, Curriculum, Pedagogies and Practice.</q> Routledge, 2017.</p>
+
+    <p>Urban, Adrienne. <q>Don't Get Lost in Translation: A Discussion of Best Practices for Creating Translation-Friendly Text and Related Curriculum for Technical Communication.</q> (2018).</p>
+  </section>
+
+  <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#777;">
+    <p>&copy; 2021 Marisa Varela. All rights reserved.</p>
+  </footer>
+
+</main>
 
