--- a/rhetoric.html
+++ b/rhetoric.html
@@ -1,1 +1,49 @@
+---
+layout: default
+title: Rhetoric
+---
+
+<main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
+
+  <header style="text-align: center; margin-bottom: 2rem;">
+    <h1>Rhetoric</h1>
+    <p><em>Exploring rhetoric in intercultural communication and hypertext</em></p>
+  </header>
+
+  <nav style="margin-bottom: 2rem;">
+    <a href="home.html">Home</a> &rarr;
+    <a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a> &rarr;
+    <strong>Rhetoric</strong>
+  </nav>
+
+  <section>
+    <p>
+      When discussing intercultural communication and hypertext, it is important to look at the role rhetoric plays and how it may differ. Thatcher goes beyond existing research on writing and argues that hypertext also determines mental and rhetorical patterns. He discusses hypertext through three intercultural and cross-cultural systems: individualism–collectivism, universal–particular, and high context–low context.
+    </p>
+
+    <p>
+      In this article, hypertext stands out among writing, orality, and even email due to its globalized and complex format that contains more colors, sounds, graphics, and information than many other forms of communication. Visual forms of communication play a large role in audience understanding and can greatly affect how a person interprets a message. Furthermore, hypertext reflects its own form of rhetoric with formatting, individualization, and limitless pathways—these links and complex webs create the lack of linearity that make hypertext rhetoric different from traditional rhetorical patterns. Thatcher considers the rhetoric of hypertext to be more public in nature than email and writing, referencing hypertext's lack of linearity as an audience-driven and metaphorical mode of communication with many contextualized links and groups.
+    </p>
+
+    <p>
+      <strong>Related glossary terms:</strong><br>
+      <a href="glossary.html#link2">Individualism-Collectivism</a><br>
+      <a href="glossary.html#link3">Universal-Particular</a><br>
+      <a href="glossary.html#link4">High Context-Low Context</a>
+    </p>
+
+    <p>
+      Finally, when it comes to rhetoric and international/intercultural communication, the rhetoric of other languages must also be considered. By understanding how rhetoric and language differ between cultures, technical communicators can create <q>translation-friendly text</q> by taking language and translation into account before editing or translating a document. For example, Urban notes that many rhetorical and linguistic devices commonly used in English simply cannot translate into many other languages—passive voice, prepositions, phrasal verbs, and metaphors are examples. Urban recommends avoiding these in technical writing for an international audience, as cultural differences in direct translations could cause miscommunication.
+    </p>
+
+    <p>
+      <a href="https://library.ucf.edu">Learn More</a>
+    </p>
+  </section>
+
+  <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#777;">
+    <p>&copy; 2021 Marisa Varela. All rights reserved.</p>
+  </footer>
+
+</main>
 
