--- a/rhetoric.html
+++ b/rhetoric.html
@@ -11,7 +11,7 @@ title: Rhetoric
   </header>
 
   <nav style="margin-bottom: 2rem;">
-    <a href="home.html">Home</a> &rarr;
+    <a href="index.html">Home</a> &rarr;
     <a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a> &rarr;
     <strong>Rhetoric</strong>
   </nav>
@@ -22,7 +22,7 @@ title: Rhetoric
     </p>
 
     <p>
-      In this article, hypertext stands out among writing, orality, and even email due to its globalized and complex format that contains more colors, sounds, graphics, and information than many other forms of communication. Visual forms of communication play a large role in audience understanding and can greatly affect how a person interprets a message. Furthermore, hypertext reflects its own form of rhetoric with formatting, individualization, and limitless pathways—these links and complex webs create the lack of linearity that make hypertext rhetoric different from traditional rhetorical patterns. Thatcher considers the rhetoric of hypertext to be more public in nature than email and writing, referencing hypertext's lack of linearity as an audience-driven and metaphorical mode of communication with many contextualized links and groups.
+      Hypertext stands out among writing, orality, and even email due to its globalized and complex format that contains more colors, sounds, graphics, and information than many other forms of communication. Visual forms of communication play a large role in audience understanding and can greatly affect interpretation. Hypertext also reflects its own form of rhetoric with formatting, individualization, and limitless pathways—links and complex webs that lack linearity make hypertext rhetoric different from traditional rhetorical patterns. Thatcher considers hypertext rhetoric more public in nature than email and writing.
     </p>
 
     <p>
@@ -33,7 +33,7 @@ title: Rhetoric
     </p>
 
     <p>
-      Finally, when it comes to rhetoric and international/intercultural communication, the rhetoric of other languages must also be considered. By understanding how rhetoric and language differ between cultures, technical communicators can create <q>translation-friendly text</q> by taking language and translation into account before editing or translating a document. For example, Urban notes that many rhetorical and linguistic devices commonly used in English simply cannot translate into many other languages—passive voice, prepositions, phrasal verbs, and metaphors are examples. Urban recommends avoiding these in technical writing for an international audience, as cultural differences in direct translations could cause miscommunication.
+      Finally, when it comes to rhetoric and international/intercultural communication, the rhetoric of other languages must also be considered. By understanding how rhetoric and language differ between cultures, technical communicators can create <q>translation-friendly text</q> by taking language and translation into account before editing or translating a document.
     </p>
 
     <p>
@@ -46,4 +46,3 @@ title: Rhetoric
   </footer>
 
 </main>
-
