--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ title: Home
     <ul>
       <li><a href="glossary.html">Glossary</a></li>
       <li><a href="rhetoric.html">Rhetoric</a></li>
+      <li><a href="digitalliteracyandrhetoric.html">Digital Literacy and Rhetoric</a></li>
       <li><a href="workcited.html">Works Cited</a></li>
     </ul>
   </section>
