--- a/cultureandtranslation.html
+++ b/cultureandtranslation.html
@@ -1,1 +1,58 @@
+---
+layout: default
+title: Learning About Cultures and Translation
+---
+
+<main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
+
+  <header style="text-align: center; margin-bottom: 2rem;">
+    <h1>Learning About Cultures and Translation</h1>
+    <p><em>Exploring international technical communication and translation</em></p>
+  </header>
+
+  <nav style="margin-bottom: 2rem;">
+    <a href="index.html">Home</a> &rarr;
+    <strong>Learning About Cultures and Translation</strong>
+  </nav>
+
+  <section>
+    <p>
+      In international technical communication, writing for translation is critical. Understanding linguistic and translational needs helps avoid extra costs, errors, or safety hazards (Urban, 5-6). Visual communication through imagery also requires careful consideration; graphics may be misinterpreted across cultures (Risku). Agboka emphasizes shifting technical communication toward social justice and local understanding. Many African and South American nations receive less attention in localization studies, creating risks due to <q>large culture ideologies</q> (Agboka 159).
+    </p>
+
+    <figure style="float:left; width:292px; margin-right:1rem; margin-bottom:1rem;">
+      <a href="https://en.wikipedia.org/wiki/Hypertext">
+        <img src="languagelearning.jpg" width="292" height="200" alt="Student Learning a Language"/>
+      </a>
+      <figcaption>Click image to learn more about hypertext</figcaption>
+    </figure>
+
+    <p>
+      Teaching intercultural communication is essential for technical communicators. Flammia (2005), Cleary (2010), Thatcher (2017), Chong (2012), and Matveeva (2005) argue that students must learn to communicate with audiences of different languages and cultures. Flammia and Cleary discuss international student projects, ethics, legal issues, and cultural norms. Chong emphasizes usability testing in international collaboration. Thatcher and Matveeva provide guidance on avoiding stereotypes and promoting collaboration.
+    </p>
+
+    <h2>Teaching About Cultures</h2>
+
+    <p class="rightpquote">
+      Hypertext combined with multicultural content provides an introductory learning experience for intercultural communication.
+    </p>
+
+    <p>
+      Traditional methods for teaching culture and language may not align with students’ personal experiences. Irwin, Moore, and Stevenson (1994) describe <q>Multicultural Links</q>, a hypertext program offering pictures, texts, maps, music, and languages from different cultures. Such resources give students a more accessible, individualized approach to learning, creating non-linear paths that increase engagement.
+    </p>
+
+    <p>
+      Bourina and Dunaeva (2019) note that hypertext creates learning environments that foster communicative competence and multicultural literacy. Learning new languages in today’s globalized world benefits from these dynamic, interactive hypertext environments.
+    </p>
+
+    <p>
+      <a href="teachinglanguages.html">Teaching Languages</a>
+    </p>
+  </section>
+
+  <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#777;">
+    <p>&copy; 2021 Marisa Varela. All rights reserved.</p>
+  </footer>
+
+</main>
 
