--- a/cultureandtranslation.html
+++ b/cultureandtranslation.html
@@ -11,7 +11,7 @@ title: Learning About Cultures and Translation
   </header>
 
   <nav style="margin-bottom: 2rem;">
-    <a href="index.html">Home</a> &rarr;
+    <a href="{{ '/' | relative_url }}">Home</a> &rarr;
     <strong>Learning About Cultures and Translation</strong>
   </nav>
 
@@ -22,7 +22,7 @@ title: Learning About Cultures and Translation
 
     <figure style="float:left; width:292px; margin-right:1rem; margin-bottom:1rem;">
       <a href="https://en.wikipedia.org/wiki/Hypertext">
-        <img src="languagelearning.jpg" width="292" height="200" alt="Student Learning a Language"/>
+        <img src="{{ '/assets/images/languagelearning.jpg' | relative_url }}" width="292" height="200" alt="Student Learning a Language"/>
       </a>
       <figcaption>Click image to learn more about hypertext</figcaption>
     </figure>
@@ -46,7 +46,7 @@ title: Learning About Cultures and Translation
     </p>
 
     <p>
-      <a href="teachinglanguages.html">Teaching Languages</a>
+      <a href="{{ '/teachinglanguages.html' | relative_url }}">Teaching Languages</a>
     </p>
   </section>
 
@@ -55,4 +55,3 @@ title: Learning About Cultures and Translation
   </footer>
 
 </main>
-
