--- a/glossary.html
+++ b/glossary.html
@@ -14,7 +14,7 @@ title: Glossary
   <!-- Navigation Breadcrumb -->
   <nav style="margin-bottom: 2rem;">
     <a href="{{ '/' | relative_url }}">Home</a> &rarr;
-    <strong>Glossary</strong>
+    <strong>PAGE TITLE HERE</strong>
   </nav>
 
   <!-- Page Content -->
