--- a/glossary.html
+++ b/glossary.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Glossary
+title: PAGE TITLE HERE
 ---
 
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
