--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ title: Home
   <section style="margin-bottom: 2rem;">
     <h2>Portfolio Sections</h2>
     <ul>
-      <li><a href="{{ '/glossary.html' | relative_url }}">Glossary</a> — A collection of key concepts and terms related to intercultural communication and technical writing.</li>
-      <li><a href="{{ '/cultureandtranslation.html' | relative_url }}">Learning About Cultures and Translation</a> — Essays and projects exploring translation, localization, and cultural considerations in writing.</li>
-      <li><a href="{{ '/digitalliteracyandrhetoric.html' | relative_url }}">Digital Literacy and Rhetoric</a> — Papers and examples of hypertext, digital literacy, and online writing practices.</li>
-      <li><a href="{{ '/rhetoric.html' | relative_url }}">Rhetoric</a> — Analysis of persuasive writing, intercultural rhetoric, and technical communication strategies.</li>
-      <li><a href="{{ '/workcited.html' | relative_url }}">Works Cited</a> — References, citations, and bibliographic resources for the portfolio.</li>
+      <li><a href="{{ '/glossary.html' | relative_url }}">Glossary</a> — A collection communication and technical writing.</li>
+      <li><a href="{{ '/cultureandtranslation.html' | relative_url }}">Learning About Cultures and Translation</a> — Essays and projects </li>
+      <li><a href="{{ '/digitalliteracyandrhetoric.html' | relative_url }}">Digital Literacy and Rhetoric</a> Blank Framework </li>
+      <li><a href="{{ '/rhetoric.html' | relative_url }}">Rhetoric</a> Blank Framework</li>
+      <li><a href="{{ '/workcited.html' | relative_url }}">Works Cited</a> Blank Framework</li>
     </ul>
   </section>
 
