--- a/digitalliteracyandrhetoric.html
+++ b/digitalliteracyandrhetoric.html
@@ -1,58 +1,30 @@
 ---
 layout: default
-title: Digital Literacy and Rhetoric
+title: PAGE TITLE HERE
 ---
 
 <main class="page-content" style="max-width: 900px; margin: auto; padding: 2rem; line-height: 1.7; font-size: 1rem;">
 
+  <!-- Page Header -->
   <header style="text-align: center; margin-bottom: 2rem;">
-    <h1>Digital Literacy and Rhetoric</h1>
-    <p><em>Exploring digital communication and intercultural learning</em></p>
+    <h1>PAGE TITLE HERE</h1>
+    <p><em>Brief description of what this page will showcase</em></p>
   </header>
 
+  <!-- Navigation Breadcrumb -->
   <nav style="margin-bottom: 2rem;">
-    <a href="index.html">Home</a> &rarr;
-    <strong>Digital Literacy and Rhetoric</strong>
+    <a href="{{ '/' | relative_url }}">Home</a> &rarr;
+    <strong>PAGE TITLE HERE</strong>
   </nav>
 
+  <!-- Page Content -->
   <section>
-    <p>
-      One multicultural online environment conducive to communication across cultures is an online forum. A fascinating example is Kim's 2015 study of online forums about Korean dramas and pop culture. Rather than taking a formal approach within schools, Kim uses an ethnographic approach to study how people communicate interculturally online.
-    </p>
-
-    <figure style="float:left; width:301px; margin-right:1rem; margin-bottom:1rem;">
-      <a href="https://en.wikipedia.org/wiki/K-pop">
-        <img src="computermonitors.jpg" width="301" height="200" alt="Computer monitors"/>
-      </a>
-      <figcaption>Click image to learn more about "K-pop"</figcaption>
-    </figure>
-
-    <p>
-      The spread and popularity of Korean music and culture provides a chance to observe multicultural learning in action. Transcultural digital literacies highlight how people from different backgrounds communicate internationally through hypertext. Kim challenges traditional curricula that define ethnicity as a <q>rigid identity construct</q> and shows that transcultural digital literacy allows flexible understanding across cultures.
-    </p>
-
-    <p>
-      <strong>Key insight:</strong> Digital literacy may be impacted by background and environment. A technical writer cannot assume accessibility or understanding without first knowing how to communicate interculturally with different groups.
-    </p>
-
-    <p>
-      Much research focuses on individual communications or Western sites. Kim’s ethnographic study shows how young people globally learn about themselves and others in online forums like DramaCrazy. Interactions included cultural traditions, self-representations, religious discussions, and personal stories, demonstrating how transcultural digital literacies enhance intercultural communication.
-    </p>
-
-    <h2>Cross-Cultural Digital Literacy</h2>
-
-    <p>
-      Matheson (2019) and Hamutoglu et al. (2020) studied digital literacy cross-culturally. Matheson compared technical communicators in India and the U.S., finding differences in technical skills like coding, but similarities that bridged intercultural understanding. Hamutoglu examined students in the U.K., Malta, and Turkey, noting differences in digital literacy across cognitive, technical, and gender factors. These findings show that digital literacy varies greatly even within a single nation, emphasizing the need to understand intercultural differences and audience needs.
-    </p>
-
-    <p>
-      <a href="rhetoric.html">Rhetoric</a>
-    </p>
+    <p>This is a placeholder for content. Replace this text with your portfolio writing, essays, projects, or research notes.</p>
   </section>
 
+  <!-- Footer -->
   <footer style="margin-top:3rem; text-align:center; font-size:0.85em; color:#777;">
-    <p>&copy; 2021 Marisa Varela. All rights reserved.</p>
+    <p>&copy; 2025 Marisa Varela. All rights reserved.</p>
   </footer>
 
 </main>
-
